--- a/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
@@ -217,7 +217,7 @@
     "### Hack 4\n",
     "Rewrite this Python Code in a more efficient way\n",
     "\n",
-    "Answer:"
+    "Answer: You can just use the sort function instead of doing all the code to do it from scratch. "
    ]
   },
   {
@@ -234,7 +234,6 @@
     }
    ],
    "source": [
-    "### you can just use the sort function instead of doing all the code to do it from scratch. \n",
     "data = [9, 1, 7, 6, 2, 8, 5, 3, 4, 0]\n",
     "data.sort()\n",
     "\n",
@@ -249,7 +248,7 @@
     "### Hack 5\n",
     "Rewrite this Python Code in a more efficient way\n",
     "\n",
-    "Answer:"
+    "Answer: You can just use the permutations function instead of doing all the code from scratch."
    ]
   },
   {
@@ -271,7 +270,6 @@
     }
    ],
    "source": [
-    "### you can just use the permutations function instead of doing all the code from scratch.\n",
     "from itertools import permutations\n",
     "\n",
     "comb = permutations([1, 2, 3], 3)\n",
