--- a/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
+++ b/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
@@ -216,7 +216,7 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Hack-4">Hack 4<a class="anchor-link" href="#Hack-4"> </a></h3><p>Rewrite this Python Code in a more efficient way</p>
-<p>Answer:</p>
+<p>Answer: You can just use the sort function instead of doing all the code to do it from scratch.</p>
 
 </div>
 </div>
@@ -258,7 +258,7 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Hack-5">Hack 5<a class="anchor-link" href="#Hack-5"> </a></h3><p>Rewrite this Python Code in a more efficient way</p>
-<p>Answer:</p>
+<p>Answer: You can just use the permutations function instead of doing all the code from scratch.</p>
 
 </div>
 </div>
