--- a/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
@@ -151,29 +151,20 @@
     "### Hack 3\n",
     "Rewrite this JavaScript Code in a more efficient way\n",
     "\n",
-    "Answer:"
+    "Answer: When there were two else's I just made one shorter and made it more efficient. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2994650908.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [12]\u001b[0;36m\u001b[0m\n\u001b[0;31m    function peak_finder(array){\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function peak_finder(array){\n",
+    "function peak_finder(array)\n",
     "  let counter = 0\n",
     "  let peak = 0\n",
     "  let peak_index =0\n",
@@ -188,18 +179,15 @@
     "    }else{\n",
     "      counter+=1\n",
     "    }\n",
-    "  }else if(counter === array.length-1){\n",
-    "     if (a[array.length-1] >= a[array.length-2]){\n",
-    "     peak = a[array.length-1]\n",
-    "     peak_index = counter\n",
-    "     counter = array.length\n",
-    "     return `The ${counter-1} indexed number, ${peak} is a peak`\n",
-    "     }\n",
     "   }else{\n",
     "      if (a[counter]> a[counter+1] && a[counter]> a[counter-1]){\n",
     "      peak = a[counter]\n",
     "      peak_index = counter\n",
     "      counter = array.length\n",
+    "      if (a[counter]> a[counter+1] && a[counter]> a[counter-1]){\n",
+    "        peak = a[counter]\n",
+    "        peak_index = counter\n",
+    "        counter = array.length\n",
     "      return `The ${counter-1} indexed number, ${peak} is a peak`\n",
     "    }else{\n",
     "      counter += 1\n",
