--- a/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
+++ b/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
@@ -140,7 +140,7 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Hack-3">Hack 3<a class="anchor-link" href="#Hack-3"> </a></h3><p>Rewrite this JavaScript Code in a more efficient way</p>
-<p>Answer:</p>
+<p>Answer: When there were two else's I just made one shorter and made it more efficient.</p>
 
 </div>
 </div>
@@ -152,7 +152,7 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">function</span> <span class="n">peak_finder</span><span class="p">(</span><span class="n">array</span><span class="p">){</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">function</span> <span class="n">peak_finder</span><span class="p">(</span><span class="n">array</span><span class="p">)</span>
   <span class="n">let</span> <span class="n">counter</span> <span class="o">=</span> <span class="mi">0</span>
   <span class="n">let</span> <span class="n">peak</span> <span class="o">=</span> <span class="mi">0</span>
   <span class="n">let</span> <span class="n">peak_index</span> <span class="o">=</span><span class="mi">0</span>
@@ -167,18 +167,15 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
     <span class="p">}</span><span class="k">else</span><span class="p">{</span>
       <span class="n">counter</span><span class="o">+=</span><span class="mi">1</span>
     <span class="p">}</span>
-  <span class="p">}</span><span class="k">else</span> <span class="k">if</span><span class="p">(</span><span class="n">counter</span> <span class="o">===</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">){</span>
-     <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">2</span><span class="p">]){</span>
-     <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-     <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
-     <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
-     <span class="k">return</span> <span class="err">`</span><span class="n">The</span> <span class="err">$</span><span class="p">{</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">}</span> <span class="n">indexed</span> <span class="n">number</span><span class="p">,</span> <span class="err">$</span><span class="p">{</span><span class="n">peak</span><span class="p">}</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">peak</span><span class="err">`</span>
-     <span class="p">}</span>
    <span class="p">}</span><span class="k">else</span><span class="p">{</span>
       <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span> <span class="o">&amp;&amp;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">]){</span>
       <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span>
       <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
       <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
+      <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span> <span class="o">&amp;&amp;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">]){</span>
+        <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span>
+        <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
+        <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
       <span class="k">return</span> <span class="err">`</span><span class="n">The</span> <span class="err">$</span><span class="p">{</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">}</span> <span class="n">indexed</span> <span class="n">number</span><span class="p">,</span> <span class="err">$</span><span class="p">{</span><span class="n">peak</span><span class="p">}</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">peak</span><span class="err">`</span>
     <span class="p">}</span><span class="k">else</span><span class="p">{</span>
       <span class="n">counter</span> <span class="o">+=</span> <span class="mi">1</span>
@@ -189,24 +186,6 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 </pre></div>
 
     </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-<div class="output_area">
-
-<div class="output_subarea output_text output_error">
-<pre>
-<span class="ansi-cyan-fg">  Input </span><span class="ansi-green-fg">In [12]</span>
-<span class="ansi-red-fg">    function peak_finder(array){</span>
-             ^
-<span class="ansi-red-fg">SyntaxError</span><span class="ansi-red-fg">:</span> invalid syntax
-</pre>
-</div>
-</div>
-
 </div>
 </div>
 
