--- a/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
+++ b/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
@@ -140,7 +140,7 @@ It would be C because a 3 step algorithm is an algorithm where there is a variab
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Hack-3">Hack 3<a class="anchor-link" href="#Hack-3"> </a></h3><p>Rewrite this JavaScript Code in a more efficient way</p>
-<p>Answer: When there were two else's I just made one shorter and made it more efficient.</p>
+<p>Answer: When there were two else's I just made one shorter and made it more efficient. I tried to use the recursion method but that did not work.</p>
 
 </div>
 </div>
