--- a/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
@@ -151,7 +151,7 @@
     "### Hack 3\n",
     "Rewrite this JavaScript Code in a more efficient way\n",
     "\n",
-    "Answer: When there were two else's I just made one shorter and made it more efficient. "
+    "Answer: When there were two else's I just made one shorter and made it more efficient. I tried to use the recursion method but that did not work. "
    ]
   },
   {
