--- a/_notebooks/2023-01-10-PBL-model.ipynb
+++ b/_notebooks/2023-01-10-PBL-model.ipynb
@@ -44,20 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'int' and 'getset_descriptor'",
+     "ename": "AttributeError",
+     "evalue": "'property' object has no attribute 'year'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatetime\u001b[39;00m \u001b[39mimport\u001b[39;00m date\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Define a User Class/Template\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# -- A User represents the data we want to manage\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mUser\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m# constructor of a User object, initializes the instance variables within object (self)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, name, uid, password, classOf, dob):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name \u001b[39m=\u001b[39m name    \u001b[39m# variables with self prefix become part of the object,\u001b[39;00m\n",
-      "\u001b[1;32m/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4\u001b[0m in \u001b[0;36mUser\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m today\u001b[39m.\u001b[39myear \u001b[39m-\u001b[39m born\u001b[39m.\u001b[39myear \u001b[39m-\u001b[39m ((today\u001b[39m.\u001b[39mmonth, today\u001b[39m.\u001b[39mday) \u001b[39m<\u001b[39m (born\u001b[39m.\u001b[39mmonth, born\u001b[39m.\u001b[39mday))\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75'>76</a>\u001b[0m dob \u001b[39m=\u001b[39m date\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=76'>77</a>\u001b[0m age \u001b[39m=\u001b[39m calculate_age(dob)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=78'>79</a>\u001b[0m \u001b[39m# update password, this is conventional setter\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=79'>80</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_password\u001b[39m(\u001b[39mself\u001b[39m, password):\n",
-      "\u001b[1;32m/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4\u001b[0m in \u001b[0;36mUser.calculate_age\u001b[0;34m(born)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=71'>72</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalculate_age\u001b[39m(born):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m     today \u001b[39m=\u001b[39m date\u001b[39m.\u001b[39mtoday()\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m today\u001b[39m.\u001b[39;49myear \u001b[39m-\u001b[39;49m born\u001b[39m.\u001b[39;49myear \u001b[39m-\u001b[39m ((today\u001b[39m.\u001b[39mmonth, today\u001b[39m.\u001b[39mday) \u001b[39m<\u001b[39m (born\u001b[39m.\u001b[39mmonth, born\u001b[39m.\u001b[39mday))\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'getset_descriptor'"
+      "\u001b[1;32m/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4\u001b[0m in \u001b[0;36mUser\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m     today \u001b[39m=\u001b[39m date\u001b[39m.\u001b[39mtoday()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m today\u001b[39m.\u001b[39myear \u001b[39m-\u001b[39m born\u001b[39m.\u001b[39myear \u001b[39m-\u001b[39m ((today\u001b[39m.\u001b[39mmonth, today\u001b[39m.\u001b[39mday) \u001b[39m<\u001b[39m (born\u001b[39m.\u001b[39mmonth, born\u001b[39m.\u001b[39mday))\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75'>76</a>\u001b[0m age \u001b[39m=\u001b[39m calculate_age(dob)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=77'>78</a>\u001b[0m \u001b[39m# update password, this is conventional setter\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=78'>79</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_password\u001b[39m(\u001b[39mself\u001b[39m, password):\n",
+      "\u001b[1;32m/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4\u001b[0m in \u001b[0;36mUser.calculate_age\u001b[0;34m(born)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=71'>72</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalculate_age\u001b[39m(born):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m     today \u001b[39m=\u001b[39m date\u001b[39m.\u001b[39mtoday()\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m today\u001b[39m.\u001b[39myear \u001b[39m-\u001b[39m born\u001b[39m.\u001b[39;49myear \u001b[39m-\u001b[39m ((today\u001b[39m.\u001b[39mmonth, today\u001b[39m.\u001b[39mday) \u001b[39m<\u001b[39m (born\u001b[39m.\u001b[39mmonth, born\u001b[39m.\u001b[39mday))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'property' object has no attribute 'year'"
      ]
     }
    ],
@@ -73,12 +73,13 @@
     "\n",
     "class User:\n",
     "    # constructor of a User object, initializes the instance variables within object (self)\n",
-    "    def __init__(self, name, uid, password, classOf, dob):\n",
+    "    def __init__(self, name, uid, password, classOf, dob, age):\n",
     "        self._name = name    # variables with self prefix become part of the object,\n",
     "        self._uid = uid\n",
     "        self.set_password(password)\n",
     "        self.classOf = classOf\n",
     "        self.dob = dob\n",
+    "        self.age = age\n",
     "\n",
     "    # a name getter method, extracts name from object\n",
     "    @property\n",
@@ -128,11 +129,10 @@
     "    def dob(self, dob):\n",
     "        self._dob = dob\n",
     "\n",
-    "    #setter\n",
-    "    @dob.setter\n",
-    "    def age(self, age):\n",
-    "        self._age = age\n",
-    "\n",
+    "    #getter\n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        return self._age\n",
     "\n",
     "    def calculate_age(born):\n",
     "        today = date.today()\n",
@@ -178,6 +178,7 @@
     "    u3 = User(name='Alexander Graham Bell', uid='lex', password='123lex', classOf='1865', dob='1845-2-21')\n",
     "    u4 = User(name='Eli Whitney', uid='eli', password='123eli', classOf='1790', dob='1772-4-16')\n",
     "    u5 = User(name='Hedy Lemarr', uid='hedy', password='123hedy', classOf='2003', dob='1988-1-30')\n",
+    "    # add things that convert dob to actual date and numbers (WIP)\n",
     "    # put user objects in list for convenience\n",
     "    users = [u1, u2, u3, u4, u5]\n",
     "    # Find user\n",
@@ -250,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 06:56:58) \n[GCC 7.5.0]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
