--- a/_posts/2023-01-10-PBL-model.md
+++ b/_posts/2023-01-10-PBL-model.md
@@ -69,12 +69,13 @@ layout: notebook
 
 <span class="k">class</span> <span class="nc">User</span><span class="p">:</span>
     <span class="c1"># constructor of a User object, initializes the instance variables within object (self)</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">uid</span><span class="p">,</span> <span class="n">password</span><span class="p">,</span> <span class="n">classOf</span><span class="p">,</span> <span class="n">dob</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">uid</span><span class="p">,</span> <span class="n">password</span><span class="p">,</span> <span class="n">classOf</span><span class="p">,</span> <span class="n">dob</span><span class="p">,</span> <span class="n">age</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_name</span> <span class="o">=</span> <span class="n">name</span>    <span class="c1"># variables with self prefix become part of the object,</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_uid</span> <span class="o">=</span> <span class="n">uid</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">set_password</span><span class="p">(</span><span class="n">password</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">classOf</span> <span class="o">=</span> <span class="n">classOf</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dob</span> <span class="o">=</span> <span class="n">dob</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">age</span> <span class="o">=</span> <span class="n">age</span>
 
     <span class="c1"># a name getter method, extracts name from object</span>
     <span class="nd">@property</span>
@@ -124,11 +125,10 @@ layout: notebook
     <span class="k">def</span> <span class="nf">dob</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dob</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_dob</span> <span class="o">=</span> <span class="n">dob</span>
 
-    <span class="c1">#setter</span>
-    <span class="nd">@dob</span><span class="o">.</span><span class="n">setter</span>
-    <span class="k">def</span> <span class="nf">age</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">age</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_age</span> <span class="o">=</span> <span class="n">age</span>
-
+    <span class="c1">#getter</span>
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">age</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_age</span>
 
     <span class="k">def</span> <span class="nf">calculate_age</span><span class="p">(</span><span class="n">born</span><span class="p">):</span>
         <span class="n">today</span> <span class="o">=</span> <span class="n">date</span><span class="o">.</span><span class="n">today</span><span class="p">()</span>
@@ -174,6 +174,7 @@ layout: notebook
     <span class="n">u3</span> <span class="o">=</span> <span class="n">User</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;Alexander Graham Bell&#39;</span><span class="p">,</span> <span class="n">uid</span><span class="o">=</span><span class="s1">&#39;lex&#39;</span><span class="p">,</span> <span class="n">password</span><span class="o">=</span><span class="s1">&#39;123lex&#39;</span><span class="p">,</span> <span class="n">classOf</span><span class="o">=</span><span class="s1">&#39;1865&#39;</span><span class="p">,</span> <span class="n">dob</span><span class="o">=</span><span class="s1">&#39;1845-2-21&#39;</span><span class="p">)</span>
     <span class="n">u4</span> <span class="o">=</span> <span class="n">User</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;Eli Whitney&#39;</span><span class="p">,</span> <span class="n">uid</span><span class="o">=</span><span class="s1">&#39;eli&#39;</span><span class="p">,</span> <span class="n">password</span><span class="o">=</span><span class="s1">&#39;123eli&#39;</span><span class="p">,</span> <span class="n">classOf</span><span class="o">=</span><span class="s1">&#39;1790&#39;</span><span class="p">,</span> <span class="n">dob</span><span class="o">=</span><span class="s1">&#39;1772-4-16&#39;</span><span class="p">)</span>
     <span class="n">u5</span> <span class="o">=</span> <span class="n">User</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;Hedy Lemarr&#39;</span><span class="p">,</span> <span class="n">uid</span><span class="o">=</span><span class="s1">&#39;hedy&#39;</span><span class="p">,</span> <span class="n">password</span><span class="o">=</span><span class="s1">&#39;123hedy&#39;</span><span class="p">,</span> <span class="n">classOf</span><span class="o">=</span><span class="s1">&#39;2003&#39;</span><span class="p">,</span> <span class="n">dob</span><span class="o">=</span><span class="s1">&#39;1988-1-30&#39;</span><span class="p">)</span>
+    <span class="c1"># add things that convert dob to actual date and numbers (WIP)</span>
     <span class="c1"># put user objects in list for convenience</span>
     <span class="n">users</span> <span class="o">=</span> <span class="p">[</span><span class="n">u1</span><span class="p">,</span> <span class="n">u2</span><span class="p">,</span> <span class="n">u3</span><span class="p">,</span> <span class="n">u4</span><span class="p">,</span> <span class="n">u5</span><span class="p">]</span>
     <span class="c1"># Find user</span>
@@ -213,7 +214,7 @@ layout: notebook
 <div class="output_subarea output_text output_error">
 <pre>
 <span class="ansi-red-fg">---------------------------------------------------------------------------</span>
-<span class="ansi-red-fg">TypeError</span>                                 Traceback (most recent call last)
+<span class="ansi-red-fg">AttributeError</span>                            Traceback (most recent call last)
 <span class="ansi-green-intense-fg ansi-bold">/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4</span> in <span class="ansi-cyan-fg">&lt;cell line: 10&gt;</span><span class="ansi-blue-fg">()</span>
 <span class="ansi-green-intense-fg ansi-bold">      &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5&#39;&gt;6&lt;/a&gt;</span> from datetime import date
 <span class="ansi-green-intense-fg ansi-bold">      &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6&#39;&gt;7&lt;/a&gt;</span> # Define a User Class/Template
@@ -224,18 +225,18 @@ layout: notebook
 <span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12&#39;&gt;13&lt;/a&gt;</span>         self._name = name    # variables with self prefix become part of the object,
 
 <span class="ansi-green-intense-fg ansi-bold">/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4</span> in <span class="ansi-cyan-fg">User</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72&#39;&gt;73&lt;/a&gt;</span>     today = date.today()
 <span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73&#39;&gt;74&lt;/a&gt;</span>     return today.year - born.year - ((today.month, today.day) &lt; (born.month, born.day))
-<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75&#39;&gt;76&lt;/a&gt;</span> dob = date
-<span class="ansi-green-fg">---&gt; &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=76&#39;&gt;77&lt;/a&gt;</span> age = calculate_age(dob)
-<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=78&#39;&gt;79&lt;/a&gt;</span> # update password, this is conventional setter
-<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=79&#39;&gt;80&lt;/a&gt;</span> def set_password(self, password):
+<span class="ansi-green-fg">---&gt; &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75&#39;&gt;76&lt;/a&gt;</span> age = calculate_age(dob)
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=77&#39;&gt;78&lt;/a&gt;</span> # update password, this is conventional setter
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=78&#39;&gt;79&lt;/a&gt;</span> def set_password(self, password):
 
 <span class="ansi-green-intense-fg ansi-bold">/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb Cell 4</span> in <span class="ansi-cyan-fg">User.calculate_age</span><span class="ansi-blue-fg">(born)</span>
 <span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=71&#39;&gt;72&lt;/a&gt;</span> def calculate_age(born):
 <span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72&#39;&gt;73&lt;/a&gt;</span>     today = date.today()
 <span class="ansi-green-fg">---&gt; &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/haehae/_notebooks/2023-01-10-PBL-model.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73&#39;&gt;74&lt;/a&gt;</span>     return today.year - born.year - ((today.month, today.day) &lt; (born.month, born.day))
 
-<span class="ansi-red-fg">TypeError</span>: unsupported operand type(s) for -: &#39;int&#39; and &#39;getset_descriptor&#39;</pre>
+<span class="ansi-red-fg">AttributeError</span>: &#39;property&#39; object has no attribute &#39;year&#39;</pre>
 </div>
 </div>
 
