--- a/_notebooks/2023-01-17-PBL-database.ipynb
+++ b/_notebooks/2023-01-17-PBL-database.ipynb
@@ -101,11 +101,10 @@
     "    posts = db.relationship(\"Post\", cascade='all, delete', backref='users', lazy=True)\n",
     "\n",
     "    # constructor of a User object, initializes the instance variables within object (self)\n",
-    "    def __init__(self, name, uid, password=\"123qwerty\", dob=date.today()):\n",
-    "        self._name = name    # variables with self prefix become part of the object, \n",
-    "        self._uid = uid\n",
-    "        self.set_password(password)\n",
-    "        self._dob = dob"
+    "    def __init__(self, noc, date=date.today(), homeworkName):\n",
+    "        self._noc = noc    # variables with self prefix become part of the object, \n",
+    "        self._homeworkName = homeworkName\n",
+    "        self._date = date"
    ]
   },
   {
