--- a/_posts/2023-01-24-5.1-2-Hacks.md
+++ b/_posts/2023-01-24-5.1-2-Hacks.md
@@ -5,6 +5,23 @@ categories: [week19]
 title: 5.1-2 Hacks
 ---
 
-## 5.1 Beneficial and Harmful Effects Hacks
+## 5.1 Hacks
 - Come up with three of your own Beneficial and corresponding Harmful Effects of Computing
+    - Beneficial
+        - Helps people with planning trips
+        - Gives honest feedback/reviews about different activities and places, which then they could use to improve on those activities and places.
+        - Lets people know the best local and tourist parts of a trip that people should go to.
+    - Harmful:
+        - Can have biased information
+        - Can potentially spread hate or negative about specific places/people/activities, which would cause those places to be less popular
+        -Can have spam accounts to promote certain places/activities or karens/bots on the website
 - Talk about dopamine issues above. Real? Parent conspiracy? Anything that is impacting your personal study and success in High School?
+    - Dopamine disorders exist. Whether it is pleasant/beneficial or negative/harmful, when someone engages in behavior that releases dopamine, they will seek that happy sensation again and hence engage in that behavior more frequently. Most likely, an addiction would grow, becoming highly time-consuming and distracting from other significant elements of your life, making it a top priority.
+
+## 5.2 Hacks
+1. How does someone empower themselves in a digital world?
+-  By developing, inventing, or learning something new digitally and using the internet to distribute it, someone gains influence in the digital world. It is possible for someone to learn a lot about a subject and educate others online. A person becomes more powerful online the more knowledge they possess and the more platforms they have to really share it on.
+2. How does someone that is empowered help someone that is not empowered? Describe something you could do at Del Norte HS.
+- A person with power can assist someone without power by lending them their knowledge and power, or by assisting them in areas or circumstances where they require further assistance. Alternatively, they might just act as a listening ear for the underprivileged individual. I might offer to tutor students at Del Norte High School who want extra assistance in particular topics. Being a mentor or providing a safe place for a kid to talk to is one method a student who is empowered at this school might assist a student who is not. The employees and instructors are sort of higher up on the school hierarchy and have greater credibility.
+3. Is paper or red tape blocking digital empowerment? Are there such barriers at Del Norte? Elsewhere?
+- Yes, the government, paper, and red tape all work to prevent digital empowerment. They have the authority to filter or exclude some people's access to particular material. These obstacles exist everywhere, including Del Norte High School. There are powerful individuals everywhere, including adults over children, instructors over pupils, and more. It is frequently evaluated based on age and experience, which is not necessarily the case. However, there are certain obstacles at this school, such as staff activities that should be disclosed to all students, but information will always be withheld from others in one way or another.
