--- a/_posts/2023-03-07-2.2-Data-Compression-Notes.md
+++ b/_posts/2023-03-07-2.2-Data-Compression-Notes.md
@@ -1,6 +1,6 @@
 ---
 keywords: fastai
-title: Unit 2.2 Data Compression Notes
+title: 2.2 Data Compression Notes
 toc: true
 categories: []
 week: 25
