--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -334,11 +334,13 @@
       "0       420        50\n",
       "1       380        40\n",
       "2       390        45\n",
+      "3       372        44\n",
       "----------Dict_to_DF_labels--------------\n",
       "      calories  duration\n",
       "day1       420        50\n",
       "day2       380        40\n",
-      "day3       390        45\n"
+      "day3       390        45\n",
+      "day4       372        44\n"
      ]
     }
    ],
@@ -347,8 +349,8 @@
     "\n",
     "#the data can be stored as a python dictionary\n",
     "dict = {\n",
-    "  \"calories\": [420, 380, 390],\n",
-    "  \"duration\": [50, 40, 45]\n",
+    "  \"calories\": [420, 380, 390, 372],\n",
+    "  \"duration\": [50, 40, 45, 44]\n",
     "}\n",
     "#stores the data in a data frame\n",
     "print(\"-------------Dict_to_DF------------------\")\n",
@@ -358,7 +360,7 @@
     "print(\"----------Dict_to_DF_labels--------------\")\n",
     "\n",
     "#or with the index argument, you can label rows.\n",
-    "df = pd.DataFrame(dict, index = [\"day1\", \"day2\", \"day3\"])\n",
+    "df = pd.DataFrame(dict, index = [\"day1\", \"day2\", \"day3\", \"day4\"])\n",
     "print(df)"
    ]
   },
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -418,14 +420,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3 entries, day1 to day3\n",
+      "Index: 4 entries, day1 to day4\n",
       "Data columns (total 2 columns):\n",
       " #   Column    Non-Null Count  Dtype\n",
       "---  ------    --------------  -----\n",
-      " 0   calories  3 non-null      int64\n",
-      " 1   duration  3 non-null      int64\n",
+      " 0   calories  4 non-null      int64\n",
+      " 1   duration  4 non-null      int64\n",
       "dtypes: int64(2)\n",
-      "memory usage: 180.0+ bytes\n",
+      "memory usage: 268.0+ bytes\n",
       "None\n"
      ]
     }
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -903,14 +905,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassifier Accuracy: 0.7705882352941177\n",
+      "DecisionTreeClassifier Accuracy: 0.7529411764705882\n",
       "LogisticRegression Accuracy: 0.788235294117647\n"
      ]
     },
@@ -918,7 +920,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/johnmortensen/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/haeryny/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
