--- a/_posts/2023-03-09-AP-unit2-3.md
+++ b/_posts/2023-03-09-AP-unit2-3.md
@@ -384,8 +384,8 @@ Student ID  GPA
 
 <span class="c1">#the data can be stored as a python dictionary</span>
 <span class="nb">dict</span> <span class="o">=</span> <span class="p">{</span>
-  <span class="s2">&quot;calories&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">420</span><span class="p">,</span> <span class="mi">380</span><span class="p">,</span> <span class="mi">390</span><span class="p">],</span>
-  <span class="s2">&quot;duration&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">50</span><span class="p">,</span> <span class="mi">40</span><span class="p">,</span> <span class="mi">45</span><span class="p">]</span>
+  <span class="s2">&quot;calories&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">420</span><span class="p">,</span> <span class="mi">380</span><span class="p">,</span> <span class="mi">390</span><span class="p">,</span> <span class="mi">372</span><span class="p">],</span>
+  <span class="s2">&quot;duration&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">50</span><span class="p">,</span> <span class="mi">40</span><span class="p">,</span> <span class="mi">45</span><span class="p">,</span> <span class="mi">44</span><span class="p">]</span>
 <span class="p">}</span>
 <span class="c1">#stores the data in a data frame</span>
 <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;-------------Dict_to_DF------------------&quot;</span><span class="p">)</span>
@@ -395,7 +395,7 @@ Student ID  GPA
 <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;----------Dict_to_DF_labels--------------&quot;</span><span class="p">)</span>
 
 <span class="c1">#or with the index argument, you can label rows.</span>
-<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="nb">dict</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;day1&quot;</span><span class="p">,</span> <span class="s2">&quot;day2&quot;</span><span class="p">,</span> <span class="s2">&quot;day3&quot;</span><span class="p">])</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="nb">dict</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;day1&quot;</span><span class="p">,</span> <span class="s2">&quot;day2&quot;</span><span class="p">,</span> <span class="s2">&quot;day3&quot;</span><span class="p">,</span> <span class="s2">&quot;day4&quot;</span><span class="p">])</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
 </pre></div>
 
@@ -414,11 +414,13 @@ Student ID  GPA
 0       420        50
 1       380        40
 2       390        45
+3       372        44
 ----------Dict_to_DF_labels--------------
       calories  duration
 day1       420        50
 day2       380        40
 day3       390        45
+day4       372        44
 </pre>
 </div>
 </div>
@@ -506,14 +508,14 @@ Name: day1, dtype: int64
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>&lt;class &#39;pandas.core.frame.DataFrame&#39;&gt;
-Index: 3 entries, day1 to day3
+Index: 4 entries, day1 to day4
 Data columns (total 2 columns):
  #   Column    Non-Null Count  Dtype
 ---  ------    --------------  -----
- 0   calories  3 non-null      int64
- 1   duration  3 non-null      int64
+ 0   calories  4 non-null      int64
+ 1   duration  4 non-null      int64
 dtypes: int64(2)
-memory usage: 180.0+ bytes
+memory usage: 268.0+ bytes
 None
 </pre>
 </div>
@@ -1139,7 +1141,7 @@ dtype: float64
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>DecisionTreeClassifier Accuracy: 0.7705882352941177
+<pre>DecisionTreeClassifier Accuracy: 0.7529411764705882
 LogisticRegression Accuracy: 0.788235294117647
 </pre>
 </div>
@@ -1148,7 +1150,7 @@ LogisticRegression Accuracy: 0.788235294117647
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stderr output_text">
-<pre>/Users/johnmortensen/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):
+<pre>/home/haeryny/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):
 STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.
 
 Increase the number of iterations (max_iter) or scale the data as shown in:
