--- a/_notebooks/2023-03-07-2.2-Data-Compression-Notes.ipynb
+++ b/_notebooks/2023-03-07-2.2-Data-Compression-Notes.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  2.2 Data Compression Notes\n",
+    "#  Data Compression Notes\n",
     "- toc: true\n",
     "- categories: []\n",
     "- week: 25"
