--- a/_notebooks/2023-03-07-2.2-Data-Compression-Notes.ipynb
+++ b/_notebooks/2023-03-07-2.2-Data-Compression-Notes.ipynb
@@ -31,7 +31,7 @@
     "- In situations where minimizing data size or transmission time is maximally important, lossy is better\n",
     "- It significantly reduces the number of bits stored or transmitted but only allow reconstruction of an approximation of the original data\n",
     "\n",
-    "#### Collegeboard Quiz\n",
+    "## Collegeboard Quiz\n",
     "\n",
     "![image](https://user-images.githubusercontent.com/111464920/223863684-4f94a8f0-307b-4c35-bf47-f931b719c24e.png)\n",
     "1. Which of the following is an advantage of a lossless compression algorithm over a lossy compression algorithm?\n",
