--- a/_notebooks/2023-03-09-2.3-Extracting-Information-From-Data.ipynb
+++ b/_notebooks/2023-03-09-2.3-Extracting-Information-From-Data.ipynb
@@ -48,6 +48,8 @@
     "- Identifying incomplete, corrup, duplicate, or inaccurate records\n",
     "- Replacing, modifying, or deleting the \"dirty\" data\n",
     "\n",
+    "## Collegeboard Quiz\n",
+    "\n",
     "\n"
    ]
   }
