--- a/_posts/2023-03-09-2.3-Extracting-Information-From-Data.md
+++ b/_posts/2023-03-09-2.3-Extracting-Information-From-Data.md
@@ -62,7 +62,7 @@ layout: notebook
 <li>Identifying incomplete, corrup, duplicate, or inaccurate records</li>
 <li>Replacing, modifying, or deleting the "dirty" data</li>
 </ul>
-
+<h2 id="Collegeboard-Quiz">Collegeboard Quiz<a class="anchor-link" href="#Collegeboard-Quiz"> </a></h2>
 </div>
 </div>
 </div>
