--- a/_notebooks/2023-03-07-AP-unit2-2.ipynb
+++ b/_notebooks/2023-03-07-AP-unit2-2.ipynb
@@ -60,13 +60,25 @@
     "### pathlib\n",
     "> File paths are different on Windows versus Mac and Linux.  This can cause problems in a project as you work and deploy on different Operating Systems (OS's), pathlib is a solution to this problem. \n",
     "- What are commands you use in terminal to access files?\n",
+    "\n",
+    "The commands that you have to use are cd and wget.\n",
     "- What are the command you use in Windows terminal to access files?\n",
+    "\n",
+    "The commands that you have to use are cd. \n",
     "- What are some of the major differences?\n",
+    "\n",
+    "They are the same.\n",
     "\n",
     "Provide what you observed, struggled with, or leaned while playing with this code.\n",
     "- Why is path a big deal when working with images?\n",
+    "\n",
+    "The path is very important because you need to know where the images are and how to access them.\n",
     "- How does the meta data source and label relate to Unit 5 topics?\n",
-    "- Look up IPython, describe why this is interesting in Jupyter Notebooks for both Pandas and Images?"
+    "\n",
+    "Master data objects are those core business objects used in the different applications across the organization, along with their associated metadata, attributes, definitions, roles, connections\n",
+    "- Look up IPython, describe why this is interesting in Jupyter Notebooks for both Pandas and Images?\n",
+    "\n",
+    "The data is returned as a “DataFrame” which is a 2 dimensional spreadsheet-like data structure with columns of different types. pandas has two main data structures - DataFrame and Series. A Series is a one-dimensional array that can hold any value type - This is not necessarily the case but a DataFrame column may be treated as a Series."
    ]
   },
   {
@@ -187,9 +199,17 @@
     "## Data Structures, Imperative Programming Style, and working with Images\n",
     "> Introduction to creating meta data and manipulating images.  Look at each procedure and explain the the purpose and results of this program.  Add any insights or challenges as you explored this program.\n",
     "- Does this code seem like a series of steps are being performed?\n",
+    "\n",
+    "Yes it does. It is in an orderly format and seems reasonable.\n",
     "- Describe Grey Scale algorithm in English or Pseudo code?\n",
+    "\n",
+    "It is in Psuedo code. \n",
     "- Describe scale image?  What is before and after on pixels in three images?\n",
-    "- Is scale image a type of compression?  If so, line it up with College Board terms described?"
+    "\n",
+    "The scale is based on how much the size increases. The first one did not increase that much. The second one descreased and the third one increased. \n",
+    "- Is scale image a type of compression?  If so, line it up with College Board terms described?\n",
+    "\n",
+    "It is a type of compression where data is compressed that lines up with how data is extracted from code. "
    ]
   },
   {
